prevent jump in settings when timing calculations change

--- a/src/content-script/components/Settings/settings.scss
+++ b/src/content-script/components/Settings/settings.scss
@@ -29,6 +29,8 @@
             em {
                 @include fontSizeSmall();
                 display: block;
+                opacity: .6;
+                white-space: nowrap;
             }
 
             select {
